objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Arbitration Claim Process</fullName>
        <description>A support process containing the stages used during arbitration claim processing.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Arb Unwind Requested</fullName>
        </values>
        <values>
            <fullName>Awaiting Buyer Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Diagnostic Results</fullName>
        </values>
        <values>
            <fullName>Awaiting Seller Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Evidence Received</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Arbitration</fullName>
        </values>
        <values>
            <fullName>Offer Made</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CR Review Process</fullName>
        <description>A support process containing the stages used during condition report review by the Arbitration team.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed %28Ready to Launch%29</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Collections</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Commercial Sales</fullName>
        <description>For processing of incoming requests from Commercial accounts</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Dealer Document Compliance</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed%28compliant%29</fullName>
        </values>
        <values>
            <fullName>Closed%28non-compliant%29</fullName>
        </values>
        <values>
            <fullName>Compliance Review</fullName>
        </values>
        <values>
            <fullName>IST Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <description>Default Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready for Response</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Title Information Process</fullName>
        <description>A support process containing the stages used during titling</description>
        <isActive>true</isActive>
        <values>
            <fullName>48 Hour Notice</fullName>
        </values>
        <values>
            <fullName>Closed Unwound</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Problem</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Return to Seller</fullName>
        </values>
        <values>
            <fullName>Returned to Seller Unwound</fullName>
        </values>
        <values>
            <fullName>Sent</fullName>
        </values>
        <values>
            <fullName>Title at ACV Unwound</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Title Unwind</fullName>
        <description>Support process used for a new title unwind case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Problem</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Transportation Process</fullName>
        <description>Support Process containing stages for Transportation cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Awaiting Release</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Cancelled by ACV</fullName>
        </values>
        <values>
            <fullName>Cancelled by Transporter</fullName>
        </values>
        <values>
            <fullName>Closed Dry Run</fullName>
        </values>
        <values>
            <fullName>Delivered</fullName>
        </values>
        <values>
            <fullName>Failed Post</fullName>
        </values>
        <values>
            <fullName>Finalized</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>Locked</fullName>
        </values>
        <values>
            <fullName>Non-Responsive-Unpaid</fullName>
        </values>
        <values>
            <fullName>Pending-Offer</fullName>
        </values>
        <values>
            <fullName>Picked-Up</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Ready-to-Post</fullName>
        </values>
        <values>
            <fullName>Sent to Third-Party</fullName>
        </values>
        <values>
            <fullName>Staged</fullName>
        </values>
        <values>
            <fullName>Unwind Transportation Requested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Unwind Process</fullName>
        <description>A support process containing the stages in the unwind process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed %28Not Approved%29</fullName>
        </values>
        <values>
            <fullName>Closed %28Resold%29</fullName>
        </values>
        <values>
            <fullName>Closed %28Rewound%29</fullName>
        </values>
        <values>
            <fullName>Final Rejection</fullName>
        </values>
        <values>
            <fullName>Inspection</fullName>
        </values>
        <values>
            <fullName>Parked</fullName>
        </values>
        <values>
            <fullName>Ready for Relaunch</fullName>
        </values>
        <values>
            <fullName>Rewound</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
        <values>
            <fullName>Transportation Arranged</fullName>
        </values>
        <values>
            <fullName>Unwound</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV_Capital_Primary_Contact_Email_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACV Capital Primary Contact Email Text</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Primary_Contact_Email_del__c</fullName>
        <description>Pulls the ACV Capital Primary Contact Email from the corresponding account.  This is needed for a the buyer notification email alert sent to buyers when capital title status = received. 

Refer:  https://acvauctions.atlassian.net/browse/CPO-9</description>
        <formula>IF( Account.Active__c = TRUE, Account.ACV_Capital_Primary_Contact__r.Email, Account.Primary_Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Capital Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Capital_Title_Status__c</fullName>
        <description>This field represents the status of a title when ACV Capital is the Buyer&apos;s payment method.</description>
        <inlineHelpText>This field represents the status of a title when ACV Capital is the Buyer&apos;s payment method.</inlineHelpText>
        <label>ACV Capital Title Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrowed</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Sent to Floor Plan</fullName>
                </value>
                <value>
                    <fullName>Return Title - Unwind</fullName>
                </value>
                <value>
                    <fullName>Return Title- Problem</fullName>
                </value>
                <value>
                    <fullName>Return Title - Resale</fullName>
                </value>
                <value>
                    <fullName>Title Hold</fullName>
                </value>
                <value>
                    <fullName>Returned to Title Dept</fullName>
                    <isActive>false</isActive>
                    <label>Returned to Title Dept</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACV_Condition_Report__c</fullName>
        <description>Links out to ACV Auction Manager.</description>
        <formula>HYPERLINK(&quot;https://app.acvauctions.com/auction/&quot; &amp; Auction_Number__r.id__c, &quot;View VCR for Auction &quot; &amp; Auction_Number__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Links out to ACV Auction Manager.</inlineHelpText>
        <label>ACV Condition Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_EasyPost_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACV EasyPost ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACV_Power_of_Attorney__c</fullName>
        <formula>Seller_Dealership__r.Limited_Power_of_Attorney_Signed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Power of Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACV_Titles_External_ID__c</fullName>
        <description>external id to identify title cases</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACV Titles External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACV_Transport_Purchased_at_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if ACV Transport was purchased at time of checkout. Unchecked if not purchased or purchased after.</description>
        <label>ACV Transport Purchased at Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACV_Transport__c</fullName>
        <formula>Auction_Number__r.ACV_Transportation_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACV_Transportation_Request_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACV Transportation Request Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AE_to_TR_CD_Count__c</fullName>
        <description>Field used to Calculate the actual average number of days from Auction End to Title received in Calendar Days</description>
        <formula>IF( Auction_End_to_Title_Received_CD__c  = 0||null,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE to TR CD Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AE_to_TS_CD_Count__c</fullName>
        <description>Field used to Calculate the actual average number of days from Auction End to Title Sent in Calendar Days</description>
        <formula>IF( Auction_End_to_Title_Sent__c  = 0||null,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE to TS CD Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_90_Day_Arbitration_Percentage__c</fullName>
        <formula>Account.Arbitration_Percent_Last_90_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 90 Day Arbitration Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_90_Day_Purchase_Volume__c</fullName>
        <formula>Account.Purchase_Volume_Past_90_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 90 Day Purchase Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Date_of_First_Purchase__c</fullName>
        <formula>Account.Date_of_First_Buy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Date of First Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>CAP-642: Created to allow Account Name to be used in LEX Email Template.  Standard field only pulls in Account ID</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_YTD_Purchase_Amount__c</fullName>
        <formula>Account.Purchase_Amount_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account YTD Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Detils__c</fullName>
        <description>Additional details regarding the collections case and reason for it</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What are additional details related to this collections case? (Do not list Auction numbers)</inlineHelpText>
        <label>Additional Details</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Minutes__c</fullName>
        <description>Adds a field measuring age of case in minutes. Under 10 = Green, Between 10-15 = Yellow, Over 15 = Red</description>
        <formula>if(IsClosed = false, 
if((NOW() - CreatedDate)*24*60 &lt;= 10, IMAGE(&quot;/resource/Greenlight&quot;,TEXT(NOW() - CreatedDate),32,32), 
if((NOW() - CreatedDate)*24*60 &gt; 10 &amp;&amp; (NOW() - CreatedDate)*24*60 &lt;= 15, IMAGE(&quot;/resource/Yellowlight&quot;,TEXT(NOW() - CreatedDate),32,32), 
if((NOW() - CreatedDate)*24*60 &gt; 15, IMAGE(&quot;/resource/Redlight&quot;,TEXT(NOW() - CreatedDate),32,32),null))), 

if((ClosedDate - CreatedDate)*24*60 &lt;= 10, IMAGE(&quot;/resource/Greenlight&quot;,TEXT(ClosedDate - CreatedDate),32,32), 
if((ClosedDate - CreatedDate)*24*60 &gt; 10 &amp;&amp; (ClosedDate - CreatedDate)*24*60 &lt;= 15, IMAGE(&quot;/resource/Yellowlight&quot;,TEXT(ClosedDate - CreatedDate),32,32), 
if((ClosedDate - CreatedDate)*24*60 &gt; 15, IMAGE(&quot;/resource/Redlight&quot;,TEXT(ClosedDate - CreatedDate),32,32),null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>if(IsClosed = false, 
if((NOW() -   Last_Touched__c )*24 &lt;= 48, IMAGE(&quot;/resource/Greenlight&quot;,TEXT(NOW() -  Last_Touched__c),32,32),
if( (NOW() - Last_Touched__c)*24 &gt; 48 &amp;&amp; (NOW() - LastModifiedDate)*24 &lt; 72, IMAGE(&quot;/resource/Yellowlight&quot;,TEXT(NOW() -  Last_Touched__c),32,32),
if((NOW() - Last_Touched__c)*24 &gt;= 72, IMAGE(&quot;/resource/Redlight&quot;,TEXT(NOW() -  Last_Touched__c),32,32),null))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_in_Days__c</fullName>
        <formula>(NOW() -CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery Country</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery Postal Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Delivery State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_in_Collections__c</fullName>
        <inlineHelpText>Dollar Amount Outstanding</inlineHelpText>
        <label>Amount in Collections</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_be_written_off_equation_of_1__c</fullName>
        <formula>IF(
(   Amount_in_Collections__c   &gt; 0 ),   Amount_in_Collections__c   -  Anticipated_Amount_to_be_collected__c  ,
   Total_Amount_in_Collections__c   -  Anticipated_Amount_to_be_collected__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>At Risk Amount is the Amount in Collections less the amount we anticipate to collect</inlineHelpText>
        <label>At Risk Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Amount_to_be_collected__c</fullName>
        <inlineHelpText>Amount We Anticipate to Collect</inlineHelpText>
        <label>Anticipated Amount to be collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arb_Close_Date_for_Titles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Arb Close Date for Titles</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arb_Denial_Child_Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arb Denial Child Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arb_Offer_Final__c</fullName>
        <label>Arb Offer - Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arb_Offer_Initial__c</fullName>
        <label>Arb Offer - Initial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arb_Pilot_Group__c</fullName>
        <label>Arb Pilot Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pilot A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arb_Reviewed_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Arb Reviewed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arb_Timeframe_Alert__c</fullName>
        <description>Displays image when Arb Cases are submitted outside the arb window for time frame.
Pre Covid Formula:
IF(OR(RecordType.DeveloperName = &quot;Arbitration_Claim&quot;&amp;&amp;
ACV_Transport__c = TRUE &amp;&amp;
Delivered_to_Case_Created__c &gt;2 &amp;&amp;
Auction_End_to_Case_Created__c &gt; Auction_Number__r.Arbitration_Plan__c || ACV_Transport__c = FALSE &amp;&amp;
Auction_End_to_Case_Created__c &gt; Auction_Number__r.Arbitration_Plan__c),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680a0000081Mwd&amp;operationContext=CHATTER&amp;contentId=05T0a00000Sg0EJ&quot;, &quot;PAST ARB TIMEFRAME&quot; , 50,170 ), null)</description>
        <formula>IF(
DATEVALUE(CreatedDate)&gt;DATE(2021,06,15),
IF(
AND(
OR(
AND(
ACV_Transport_Purchased_at_Checkout__c=FALSE,
((Claim_Manually_Submitted_Date__c-DATEVALUE(Auction_Number__r.end_time__c))+1&gt;Auction_Number__r.Arbitration_Plan__c)),
AND(
ACV_Transport_Purchased_at_Checkout__c=TRUE,
(Claim_Manually_Submitted_Date__c-DATEVALUE(Auction_Number__r.end_time__c))+1&gt;Auction_Number__r.Arbitration_Plan__c,
IF(
Auction_Number__r.Arbitration_Plan__c=10,
(Claim_Manually_Submitted_Date__c-DATEVALUE(Auction_Number__r.end_time__c))+1&gt;(
IF(
ISBLANK(Date_Delivered_Actual__c),
CASE(
WEEKDAY(Delivery_Date__c),
7, Delivery_Date__c + 3,
6, Delivery_Date__c + 3,
Delivery_Date__c + 2),
CASE(
WEEKDAY(Date_Delivered_Actual__c),
7, Date_Delivered_Actual__c + 3,
6, Date_Delivered_Actual__c + 3,
Date_Delivered_Actual__c + 2)
)-DATEVALUE(Auction_Number__r.end_time__c)+1),
IF(
ISBLANK(Date_Delivered_Actual__c),
(Claim_Manually_Submitted_Date__c-Delivery_Date__c&gt;(Auction_Number__r.Arbitration_Plan__c-10)),
(Claim_Manually_Submitted_Date__c-Date_Delivered_Actual__c&gt;(Auction_Number__r.Arbitration_Plan__c-10)))))),
OR(
AND(
(Claim_Manually_Submitted_Date__c-DATEVALUE(Auction_Number__r.end_time__c))&gt;15,
Auction_Number__r.Arbitration_Plan__c&lt;15,
(Payment_Method__c=&apos;ach&apos;||Payment_Method__c=&apos;ebill&apos;),
(Claim_Manually_Submitted_Date__c-DATEVALUE(Release_Datetime__c))&gt;9
),
AND(
Auction_Number__r.Arbitration_Plan__c&gt;15,
(Payment_Method__c=&apos;ach&apos;||Payment_Method__c=&apos;ebill&apos;),
(Claim_Manually_Submitted_Date__c-DATEVALUE(Release_Datetime__c))&gt;9
),
AND(
Payment_Method__c!=&apos;ach&apos;,
Payment_Method__c!=&apos;ebill&apos;
),
AND(
(Claim_Manually_Submitted_Date__c-DATEVALUE(Release_Datetime__c))&gt;9))),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680a0000081Mwd&amp;operationContext=CHATTER&amp;contentId=05T0a00000Sg0EJ&quot;,&quot;PAST ARB TIMEFRAME&quot;,50,170),
null),
IF(
DATEVALUE(CreatedDate)&lt;DATE(2020,03,23),
IF(
(DATEVALUE(CreatedDate) - DATEVALUE(Auction_Number__r.end_time__c) + 1 &gt; Auction_Number__r.Arbitration_Plan__c) &amp;&amp;
OR(
ACV_Transport__c = FALSE,
AND(
ACV_Transport__c = TRUE,
Delivered_to_Case_Created__c &gt; 2)),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680a0000081Mwd&amp;operationContext=CHATTER&amp;contentId=05T0a00000Sg0EJ&quot;,&quot;PAST ARB TIMEFRAME&quot;,50,170),
null),
IF(
(DATEVALUE(CreatedDate) - DATEVALUE(Auction_Number__r.end_time__c) + 1 &gt; Auction_Number__r.Arbitration_Plan__c)
&amp;&amp;
OR(
ACV_Transport__c = FALSE,
AND(
ACV_Transport__c = TRUE,
Delivered_to_Case_Created__c &gt; 2))
&amp;&amp;
OR(
AND(
(DATEVALUE(CreatedDate)-DATEVALUE(Auction_Number__r.end_time__c)+1)&gt;15,
Auction_Number__r.Arbitration_Plan__c&lt;15,
Payment_Method__c=&apos;ach&apos;,
Days_from_Arb_Created_to_Release__c&gt;9,
Account.Preferred_buyer__c=FALSE),
AND(
Auction_Number__r.Arbitration_Plan__c&gt;15,
Payment_Method__c=&apos;ach&apos;,
Days_from_Arb_Created_to_Release__c&gt;9,
Account.Preferred_buyer__c=FALSE),
Payment_Method__c!=&apos;ach&apos;,
(Payment_Method__c=&apos;ach&apos;&amp;&amp;Account.Preferred_buyer__c=TRUE)),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680a0000081Mwd&amp;operationContext=CHATTER&amp;contentId=05T0a00000Sg0EJ&quot;,&quot;PAST ARB TIMEFRAME&quot;,50,170),
null)))</formula>
        <label>Expanded Arb Timeframe Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arbitration_Extension_Reason__c</fullName>
        <description>Is required when an arbitration claims is opened on an Auction that ended more than 7 days ago.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you are opening a claim on an Auction that falls outside of an arbitration eligibility window, please explain why.</inlineHelpText>
        <label>Arbitration Extension Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Arbitration_Plan_Days__c</fullName>
        <formula>TEXT(Auction_Number__r.Arbitration_Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arbitration Plan Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arbitrator__c</fullName>
        <description>Field to enter the arbitrator on unwind record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Arbitrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Credit_Amount__c</fullName>
        <label>Assigned Credit Amount</label>
        <summarizedField>Resolution__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Resolution__c.Resolution__c</field>
            <operation>equals</operation>
            <value>ACV Credit Assigned</value>
        </summaryFilterItems>
        <summaryForeignKey>Resolution__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Auction_End_Time__c</fullName>
        <description>Looking to eliminate this field in favor of &quot;Auction_End__c&quot; as both return same values.</description>
        <formula>&quot;Use &apos;Auction End&apos; field&quot;</formula>
        <label>xAuction End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_End__c</fullName>
        <formula>Auction_Number__r.end_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auction_End_to_Buyer_Paid__c</fullName>
        <formula>Buyer_Payment_Status_Timestamp__c - Auction_End__c</formula>
        <label>Auction End to Buyer Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auction_End_to_Case_Created__c</fullName>
        <description>Calculates the number of days between case create and auction end - helps to populate the Arb Timeframe Alert</description>
        <formula>DATEVALUE(CreatedDate) - DATEVALUE(Auction_End__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction End to Case Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auction_End_to_Title_Received_CD__c</fullName>
        <formula>Title_Received_Date__c - DATEVALUE(Auction_End__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction End to Title Received (CD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auction_End_to_Title_Sent_BD__c</fullName>
        <formula>CASE(MOD( DATEVALUE(Auction_End__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( Title_Sent_Date__c - DATEVALUE(Auction_End__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Title_Sent_Date__c - DATEVALUE(Auction_End__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Title_Sent_Date__c - DATEVALUE(Auction_End__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Title_Sent_Date__c - DATEVALUE(Auction_End__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Title_Sent_Date__c - DATEVALUE(Auction_End__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Title_Sent_Date__c - DATEVALUE(Auction_End__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Title_Sent_Date__c - DATEVALUE(Auction_End__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Title_Sent_Date__c - DATEVALUE(Auction_End__c) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction End to Title Sent (BD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auction_End_to_Title_Sent__c</fullName>
        <formula>Title_Sent_Date__c - DATEVALUE(Auction_End__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is calendar days, not business days.</inlineHelpText>
        <label>Auction End to Title Sent (CD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auction_Green_Light__c</fullName>
        <formula>Auction_Number__r.Image_Stop_Light__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Light</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_ID_s__c</fullName>
        <description>Auction Id(s) related to Case</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Auction ID(s) related to Case</inlineHelpText>
        <label>Auction ID(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auction_Lights__c</fullName>
        <formula>Auction_Number__r.Auction_Lights__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Lights</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Number_Case__c</fullName>
        <formula>Auction_Number__r.id__c</formula>
        <label>Auction Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Number_Searchable__c</fullName>
        <description>This field is filled by a workflow. It was created to provide a searchable Auction Number field since the Lookup and Formula Auction Number fields are not.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auction Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auction Number</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auction_Payment_Status__c</fullName>
        <formula>Text(Auction_Number__r.payment_status__c)</formula>
        <label>Auction Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Relaunch_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Auction ID for the relaunched auction</description>
        <label>Auction Relaunch ID</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Cases (Auction Relaunch ID)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auction_Sale_Date__c</fullName>
        <description>Field for auction sale date on unwinds</description>
        <formula>DATEVALUE( Auction_Number__r.end_time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Sale Date</label>
        <type>Date</type>
    </fields>
</CustomObject>